# studylm

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml
studylm/: studylm.py
studylm/agents/: research.py
studylm/config/: constants.py
studylm/core/: knowledge_graph.py  llm.py  pdf_parser.py
studylm/tools/: arxiv.py  deepresearch.py  rag.py  search.py  youtube.py
studylm/ui/: app.py
studylm/utils/: file.py  logger.py  parser.py
