[project]
name = "studylm"
version = "0.1.0"
description = "An AI-powered study assistant that helps you learn from documents using LLMs"
authors = [
    {name = "Chirag Juneja",email = "chiragjuneja6@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
