[project]
name = "studylm"
version = "0.1.0"
description = "An AI-powered study assistant that helps you learn from documents using LLMs"
authors = [
    {name = "Chirag Juneja",email = "chiragjuneja6@gmail.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.12.3"
pytest = "^8.4.1"

