[project]
name = "studylm"
version = "0.1.0"
description = "An AI-powered study assistant that helps you learn from documents using LLMs"
authors = [
    {name = "Chirag Juneja",email = "chiragjuneja6@gmail.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "pypdf (>=5.8.0,<6.0.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-ollama (>=0.3.5,<0.4.0)",
    "networkx (>=3.5,<4.0)",
    "pyvis (>=0.3.2,<0.4.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)",
    "langgraph (>=0.6.3,<0.7.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "arxiv (>=2.2.0,<3.0.0)",
    "ddgs (>=9.5.2,<10.0.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "langgraph-supervisor (>=0.0.29,<0.0.30)",
    "youtube-search (>=2.1.2,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.12.3"
pytest = "^8.4.1"
ipython = "^9.4.0"

